trunk/Archive2/f0/9179e76793f827/output
main.cpp:1:1: error: expected unqualified-id before '<' token
 </div></div></div></div></div><script type="text/javascript">alert("I hope ace editor is reinforced against XSS...");</Script>
 ^
main.cpp:1:118: error: expected unqualified-id before '<' token
 </div></div></div></div></div><script type="text/javascript">alert("I hope ace editor is reinforced against XSS...");</Script>
                                                                                                                      ^
